--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
     "presets": [
-        "env","react","stage-2"
+        "env","react","stage-2","stage-0"
     ],
     "plugins": [
         ["import", {"libraryName": "antd", "style": true} ]
