--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "webpack-cli webpack.common.js",
-    "start": "webpack-dev-server --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.dev.js --watch",
     "start:dev": "webpack --config webpack.prod.js"
   },
   "keywords": [
@@ -35,7 +35,8 @@
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "workbox-webpack-plugin": "^3.4.1"
   },
   "dependencies": {
     "antd": "^3.7.2",
@@ -43,6 +44,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "webpack-pwa-manifest": "^3.7.1"
   }
 }
